--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -5,7 +5,7 @@
   </head>
   <body>
    <section>
-    <h1>this is about page</h1>
+    <h1>pratik about us page</h1>
    </section>
   </body>
 </html>
