--- a/src/main/resources/templates/adminBase.html
+++ b/src/main/resources/templates/adminBase.html
@@ -35,7 +35,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/admin/addOwner">Add Owner</a></li>
-            <li><a class="dropdown-item" href="#">Add Shop</a></li>
+            <li><a class="dropdown-item" href="/admin/addShop">Add Shop</a></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
