add product type pages added

--- a/src/main/resources/templates/adminBase.html
+++ b/src/main/resources/templates/adminBase.html
@@ -36,7 +36,8 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/admin/addOwner">Add Owner</a></li>
             <li><a class="dropdown-item" href="/admin/addShop">Add Shop</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="/admin/addProductType">Add Product Type</a></li>
+            <li><a class="dropdown-item" href="/admin/purchaseOrder">Add Purchase Order</a></li>
           </ul>
         </li>
         <li class="nav-item">
