CheckBox releted code

--- a/src/main/resources/templates/addShop.html
+++ b/src/main/resources/templates/addShop.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >Close</button>
 		<button type="button" class="btn btn-primary" onclick="saveNewShop()">Save</button>
       </div>
     </div>
@@ -79,7 +79,7 @@
         <div id="mapOwnerToShopBody"></div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="refreshPage()">Close</button>
       </div>
     </div>
   </div>
