Generate Invoice Functionality Code

--- a/src/main/resources/templates/adminBase.html
+++ b/src/main/resources/templates/adminBase.html
@@ -22,12 +22,8 @@
     <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.4.1/js/dataTables.responsive.min.js"></script>
 
-    
-
-
-
      
-      
+ 
     <title th:text="${title}">home page</title>
   </head>
   <body>
@@ -69,6 +65,11 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
+        
+        <li class="nav-item">
+          <a class="nav-link" href="/GenerateInvoice">Generate Invoice</a>
+        </li>
+        
       </ul>
     </div>
     
