Generate Invoice releted files

--- a/src/main/resources/templates/addShop.html
+++ b/src/main/resources/templates/addShop.html
@@ -79,7 +79,8 @@
         <div id="mapOwnerToShopBody"></div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="refreshPage()">Close</button>
+<!--		  <button style="text-align: left;" type="button" class="btn btn-warning float-left" data-bs-dismiss="modal" onclick="refreshPage()" >Save</button>-->
+        <button type="button" class="btn btn-success" data-bs-dismiss="modal" onclick="refreshPage()">Save</button>
       </div>
     </div>
   </div>
