--- a/src/main/resources/templates/GenerateInvoice.html
+++ b/src/main/resources/templates/GenerateInvoice.html
@@ -1,6 +1,43 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.com" th:fragment="layout(content)">
-  <head>
-  </head>
-  <h1>Generate bill page...!</h1>
+<html lang="en" xmlns:th="http://www.thymeleaf.com" th:replace="adminBase::layout(~{::section})">
+
+<head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+
+	<style>
+		.container {
+			display: flex;
+			justify-content: center;
+			flex-direction: row;
+		}
+	</style>
+
+</head>
+
+<body>
+	<section>
+		<div style="width:800px; margin:0 auto;">
+		<div class="col-5">
+			<div class="container">
+
+				<div class="card text-center mx-auto" style="width: 50rem;">
+					<div class="card-header bg-info text-center text-white">
+						<h3>Welcome to Invoice</h3>
+					</div>
+					<div class="card-body">
+						<form>
+							<a th:href="@{/registerInvoice}" class="btn btn-success ">Add Invoice <i
+									class="fa fa-plus-square" aria-hidden="true"></i></a>
+							<a th:href="@{/getAllInvoices}" class="btn btn-primary">Show All Invoices</a>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+	</section>
+</body>
+
 </html>
