--- a/src/main/resources/templates/allInvoicesPage.html
+++ b/src/main/resources/templates/allInvoicesPage.html
@@ -37,7 +37,7 @@
 									<td th:text=${ob.location}></td>
 									<td th:text=${ob.amount}></td>
 
-									<td><a th:href="@{/printInvoice(id=${ob.id})}"><svg
+									<td><a th:href="@{/singleUserPdf(id=${ob.id})}"><svg
 												xmlns="http://www.w3.org/2000/svg" width="20" height="20"
 												fill="currentColor" class="bi bi-printer-fill" viewBox="0 0 16 16">
 												<path
