--- a/src/main/resources/templates/addShop.html
+++ b/src/main/resources/templates/addShop.html
@@ -33,7 +33,7 @@
 			
 			<div class="mb-3">
 				<label for="shop_name" class="form-label">Shop Name</label>
-				<input name="SHOP_NAME"  type="text" class="form-control" id="shop_name" aria-describedby="emailHelp" requierd>
+				<input name="SHOP_NAME"  type="text" class="form-control" id="shop_name1" aria-describedby="emailHelp" requierd>
 			</div>
 			
 			<div class="mb-3">
