--- a/src/main/resources/templates/purchaseOrder.html
+++ b/src/main/resources/templates/purchaseOrder.html
@@ -19,6 +19,11 @@
       background-color: #337ab7;
       color: #fff;
     }
+    
+    .hiddenClass{
+		display:none;
+	}
+    
   </style>
   
     <div class="container-fluid">
@@ -37,14 +42,16 @@
   </tbody>
 </table>
 
+<div id="hiddenDiv"></div>
+
 	<nav>
 		<div class="nav nav-tabs" id="nav-tab" role="tablist" style="background-color:rgb(192, 192, 192);">
 			<button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button"
-				role="tab" aria-controls="nav-home" aria-selected="true">Current</button>
+				role="tab" aria-controls="nav-home" aria-selected="true" onclick="$('#AddProductTab').addClass('hiddenClass');getAllpurchase();">Current</button>
 			<button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button"
 				role="tab" aria-controls="nav-profile" aria-selected="false">History</button>
-			<button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button"
-				role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button>
+			<button class="nav-link hiddenClass" id="AddProductTab" data-bs-toggle="tab" data-bs-target="#AddProduct-contact" type="button"
+				role="tab" aria-controls="nav-contact" aria-selected="false">Add Product</button>
 		</div>
 	</nav>
 	
@@ -53,7 +60,11 @@
 	<div id="purchaseTable"></div>
 	</div>
 	<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">History</div>
-	<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">third</div>
+	<div class="tab-pane fade" id="AddProduct-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+	<div id="AddProductDiveBackButton" style="margin: 10px;"> </div>
+	<div id="AddProductDiveInfo"> </div>
+	<div id="AddProductDive"> </div>
+	</div>
 </div>
 
 
