--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -5,7 +5,11 @@
   </head>
   <body>
    <section>
-    <h1>pratik about us page</h1>
+   
+   <p>My Shop Location.</p>
+   <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d793.5620420387812!2d75.21380266431103!3d18.8942476798388!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1692504135704!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+   
    </section>
   </body>
 </html>
