--- a/src/main/resources/templates/adminBase.html
+++ b/src/main/resources/templates/adminBase.html
@@ -52,22 +52,20 @@
             <li><a class="dropdown-item" href="/admin/addShop">Add Shop</a></li>
             <li><a class="dropdown-item" href="/admin/addProductType">Add Product Type</a></li>
             <li><a class="dropdown-item" href="/admin/purchaseOrder">Add Purchase Order</a></li>
+            <li><a class="dropdown-item" href="/admin/purchaseOrder">OverAll Shop</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+        
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+          <a class="nav-link dropdown-toggle" style="color: rgb(255, 255, 255);" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Customer
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="/admin/addCustomer">Add Customer</a></li>
           </ul>
         </li>
+        
+        
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
