search functionality on order ui

--- a/src/main/resources/templates/adminTemplete/addCustomer.html
+++ b/src/main/resources/templates/adminTemplete/addCustomer.html
@@ -20,6 +20,19 @@
         position: sticky;
         top: 0px;
 	}
+	
+	.search-container
+	{
+		position: relative;
+	}
+
+	.search-result{
+		position: absolute;
+		background: white;
+		border: 1px solid gray;
+		width: 90%;
+		display: none;
+	}
    
 	</style>
 		
@@ -144,7 +157,8 @@
 					</div>
 				</div>
 			</div>
-
+			
+			
 		</div>
 	</section>
 </body>
