new ui of adding product to overall shop

--- a/src/main/resources/templates/adminBase.html
+++ b/src/main/resources/templates/adminBase.html
@@ -56,7 +56,7 @@
             <li><a class="dropdown-item" href="/admin/addShop">Add Shop</a></li>
             <li><a class="dropdown-item" href="/admin/addProductType">Add Product Type</a></li>
             <li><a class="dropdown-item" href="/admin/purchaseOrder">Add Purchase Order</a></li>
-            <li><a class="dropdown-item" href="/admin/purchaseOrder">OverAll Shop</a></li>
+            <li><a class="dropdown-item" href="/admin/overAllShop">OverAll Shop</a></li>
           </ul>
         </li>
         
