overall Shop ui commited

--- a/src/main/resources/templates/adminTemplete/overAllShop.html
+++ b/src/main/resources/templates/adminTemplete/overAllShop.html
@@ -24,6 +24,12 @@
 				</tr>
 			</tbody>
 		</table>
+		
+		<div>
+		    <div id="overAllShop"> </div>
+		   
+	  </div>
+		
     
     </div>
     
