proceed button added

--- a/src/main/resources/templates/adminTemplete/addCustomer.html
+++ b/src/main/resources/templates/adminTemplete/addCustomer.html
@@ -75,6 +75,9 @@
 
 					<button class="d-lg-none btn btn-success" id="addOrderTab" data-bs-toggle="tab" data-bs-target="#AddOrder-contact"
 						type="button" role="tab" aria-controls="nav-contact" aria-selected="false">addOrder</button>
+						
+						<button class="d-lg-none btn btn-success" id="OrderFinalizationTab" data-bs-toggle="tab" data-bs-target="#OrderFinalizationTab-contact"
+						type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Order Finalization</button>
 
 				</div>
 			</nav>
@@ -93,8 +96,15 @@
 	 <div id="backBtn"></div>
 	 <div id="infoDive"></div>
 	 <div id="orderDetail"></div>
-	
-</div>
+   </div>
+   
+   <!-- after click on  AddOrder tab we will get this div  -->
+	<div class="tab-pane fade" id="OrderFinalizationTab-contact" role="tabpanel" aria-labelledby="nav-profile-tab">
+	 <div id="backBtn"></div>
+	 <div id="orderFinalizationDetail"></div>
+   </div>
+   
+   
  <div id="hiddenInfo"></div>
 	
 			
